# Mistral-ULM

./: .gitignore  README.md  hubconf.py  model_config.json  pyproject.toml  train.py  train_config.json
scripts/: loglikelihood_zerospeech.py
ulm/: __init__.py  data.py  trainer.py  transformer.py
ulm/phones/: __init__.py  dataset.py  tokenizer.py
ulm/units/: __init__.py  dataset.py  tokenizer.py
